--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,8 @@
 
 #projects .container:hover {
     box-shadow: 0px 0px 50px rgba(0,0,0,1);
+    transform: translateY(-15px);
+    z-index: 10;
 }
 
 #projects .container h3 {
